# indoor-highlights

./: .gitignore  README.md  config.py  main.py  process_highlights.sh  pyproject.toml
src/: batch_process.py  main.py  process_all.py
src/youtube/: __init__.py  auth.py  cli.py  uploader.py
